			ROX-Filer
			A RISC OS-like filer for X
			by Thomas Leonard

20-Jun-2002
~~~~~~~~~~~
Bugfix: Using another window in between entering target mode and selecting
	the target printed a warning instead of performing the operation.

17-Jun-2002
~~~~~~~~~~~
Fix problem with root menu positioning on icewm (reported by Bernard Jungen).

16-Jun-2002
~~~~~~~~~~~
More robust approach to SOAP errors.

11-Jun-2002
~~~~~~~~~~~
Require version 2.0.1 or later of Gtk, due to bugs in 2.0.0.
Changing the pinboard font realigns the icons.
Bugfix: Symlinked items in the SendTo menu didn't use globicons correctly
	(spotted by Arnaud Calvo).
Bugfix: Filer sometimes failed to load the backdrop supplied by a program
	(reported by Arnaud Calvo).

10-Jun-2002
~~~~~~~~~~~
Updated Spanish translation (Marcelo Ramos).

08-Jun-2002
~~~~~~~~~~~
Move Xterm Here to Window menu and add Switch to xterm (suggested by
Gregory Spath).
Bugfix: Some shortcuts didn't work properly on some keyboards (reported by
	Lorint and Musus Umbra).

06-Jun-2002
~~~~~~~~~~~
When installing without a manpage, just warn the user instead of aborting
(suggested by Simon Britnell).

01-Jun-2002
~~~~~~~~~~~
Code tidying (Bernard Jungen).

31-May-2002
~~~~~~~~~~~
Option to switch automatically between Large and Small icons (Stephen Watson).
Allow blank icon names (suggested by Gregory Spath).
Bugfix: Default icon for iconified windows wasn't found (Jimmy Olgeni).
Bugfix: Sometimes the SOAP message sent to a running process got displayed.

30-May-2002 (Release 1.3.1)
~~~~~~~~~~~
Fix redraw bug with selected icons.

29-May-2002
~~~~~~~~~~~
Respect CHOICESPATH when installing (spotted by Vincent Lefevre).
Set Icon now creates icons in PNG format (spotted by Wilbert Berendsen).

28-May-2002
~~~~~~~~~~~
Merged in icons from rox-base (converted to PNG format and renamed).
Bugfix: When showing iconified windows, the filer could crash if a window
	disappeared at the wrong moment.

27-May-2002
~~~~~~~~~~~