@@ -86,8 +86,9 @@ If on, ignores case and punctuation and handles numbers properly: file8, File9, 
         <hbox>
 	  <menu name='toolbar_type' label='Toolbar type:'>
 	  <item label='None' value='0'/>
-	  <item label='Small' value='1'/>
-	  <item label='Large' value='2'/>
+	  <item label='Icons only' value='1'/>
+	  <item label='Text under icon' value='2'/>
+	  <item label='Text beside icon' value='3'/>
 	  </menu>
 	  <spacer/>
 	  <toggle name='toolbar_show_info' label='Show totals of items'>Show the number of items displayed in a filer window, as well as the number of hidden items (if any). When there's a selection, show the number of selected items and their combined size.</toggle>
