@@ -2,6 +2,10 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+21-Jun-2002
+~~~~~~~~~~~
+Added 'Text beside icon' toolbar style (Michael Adams).
+
 20-Jun-2002
 ~~~~~~~~~~~
 Bugfix: Using another window in between entering target mode and selecting
